tests/snapshots/snapshots__payment-sessions.snap
---
source: tests/snapshots.rs
expression: help_for(&args)
---
Payment session operations (create, get, cancel)

Usage: flute2 payment-sessions [OPTIONS] <COMMAND>

Commands:
  create  Create a new payment session (POST /v2/payment-sessions)
  get     Fetch a single payment session by ID (GET /v2/payment-sessions/{paymentSessionId})
  cancel  Cancel a payment session (POST /v2/payment-sessions/{paymentSessionId}/cancel)
  help    Print this message or the help of the given subcommand(s)

Options:
  -h, --help  Print help

Global options:
      --profile <PROFILE>  Active profile (environment). `sandbox` (default) or `production`/`prod` [env: FLUTE2_PROFILE=]
      --output <OUTPUT>    Output format: table (default), json, or quiet (id only). When omitted, falls back to the `FLUTE2_OUTPUT` env var, then to the `output` key in ~/.flute2/config.toml, then to `table` [env: FLUTE2_OUTPUT=] [possible values: table, json, quiet]
      --debug              Print HTTP request/response traces to stderr. Card and bank-account numbers are masked to the last 4 digits; CVV/security codes are removed
