tests/snapshots/snapshots__payment-sessions_create.snap
---
source: tests/snapshots.rs
expression: help_for(&args)
---
Create a new payment session (POST /v2/payment-sessions)

Usage: flute2 payment-sessions create [OPTIONS]

Options:
      --mode <MODE>
          Session mode: `payment` (default), `save-method` or `payment-and-save`

          Possible values:
          - payment:          Take a payment (default)
          - save-method:      Store a payment method and take nothing
          - payment-and-save: Take a payment and store the payment method

      --amount <AMOUNT>
          Amount to charge. Plain decimal, e.g. `100.00`. Omit for a session the payer fills in at checkout; a `save-method` session needs no flag

      --tip-amount <TIP_AMOUNT>
          Tip amount added to the amount charged

      --customer-id <CUSTOMER_ID>
          Customer UUID to link the session to

      --customer-handling <CUSTOMER_HANDLING>
          What to keep once the session completes: `create-customer` or `token-only`
          
          [possible values: create-customer, token-only]

      --reference-id <REFERENCE_ID>
          Merchant-assigned reference ID, part of the duplicate-check key

      --return-url <RETURN_URL>
          Where to send the payer after a successful payment

      --skip-address-verification
          Bypass address verification. Only meaningful on a paying session

      --page-name <PAGE_NAME>
          Display name shown on the checkout page

      --payment-notes <PAYMENT_NOTES>
          Notes shown to the payer on the checkout page

      --after-completion-message <AFTER_COMPLETION_MESSAGE>
          Message shown to the payer once the session completes

      --expires-at <EXPIRES_AT>
          UTC expiry (ISO 8601, ending in `Z`), e.g. `2026-09-15T00:00:00Z`. Omit for a session that never expires

      --metadata <KEY=VALUE>
          Arbitrary `key=value` pair to attach, handed back on the read. Repeat the flag for several pairs

      --card-enabled
          Accept card payments

      --card-processor-id <CARD_PROCESSOR_ID>
          Charge card payments through this processor

      --ach-enabled
          Accept ACH payments

      --ach-processor-id <ACH_PROCESSOR_ID>
          Charge ACH payments through this processor

  -h, --help
          Print help (see a summary with '-h')

Global options:
      --profile <PROFILE>
          Active profile (environment). `sandbox` (default) or `production`/`prod`
          
          [env: FLUTE2_PROFILE=]

      --output <OUTPUT>
          Output format: table (default), json, or quiet (id only). When omitted, falls back to the `FLUTE2_OUTPUT` env var, then to the `output` key in ~/.flute2/config.toml, then to `table`
          
          [env: FLUTE2_OUTPUT=]
          [possible values: table, json, quiet]

      --debug
          Print HTTP request/response traces to stderr. Card and bank-account numbers are masked to the last 4 digits; CVV/security codes are removed
