tests/snapshots/snapshots__pos.snap
---
source: tests/snapshots.rs
expression: help_for(&args)
---
POS transaction operations (create [--wait], get, list, cancel, print-receipt)

Usage: flute2 pos [OPTIONS] <COMMAND>

Commands:
  create         Create a POS transaction (POST /v2/pos/transactions)
  get            Fetch a single POS transaction by ID (GET /v2/pos/transactions/{posTransactionId})
  list           List POS transactions (GET /v2/pos/transactions)
  cancel         Cancel a POS transaction (POST /v2/pos/transactions/{posTransactionId}/cancel)
  print-receipt  Print a transaction receipt on a terminal (POST /v2/pos/transactions/{posTransactionId}/print-receipt)
  help           Print this message or the help of the given subcommand(s)

Options:
  -h, --help  Print help

Global options:
      --profile <PROFILE>  Active profile (environment). `sandbox` (default) or `production`/`prod` [env: FLUTE2_PROFILE=]
      --output <OUTPUT>    Output format: table (default), json, or quiet (id only). When omitted, falls back to the `FLUTE2_OUTPUT` env var, then to the `output` key in ~/.flute2/config.toml, then to `table` [env: FLUTE2_OUTPUT=] [possible values: table, json, quiet]
      --debug              Print HTTP request/response traces to stderr. Card and bank-account numbers are masked to the last 4 digits; CVV/security codes are removed
