tests/snapshots/snapshots__pos_cancel.snap
---
source: tests/snapshots.rs
expression: help_for(&args)
---
Cancel a POS transaction (POST /v2/pos/transactions/{posTransactionId}/cancel).

Requires `--yes` to prevent accidental cancellation.

Usage: flute2 pos cancel [OPTIONS] <POS_TRANSACTION_ID>

Arguments:
  <POS_TRANSACTION_ID>
          POS transaction UUID to cancel (positional)

Options:
      --yes
          Confirm the cancellation (required)

  -h, --help
          Print help (see a summary with '-h')

Global options:
      --profile <PROFILE>
          Active profile (environment). `sandbox` (default) or `production`/`prod`
          
          [env: FLUTE2_PROFILE=]

      --output <OUTPUT>
          Output format: table (default), json, or quiet (id only). When omitted, falls back to the `FLUTE2_OUTPUT` env var, then to the `output` key in ~/.flute2/config.toml, then to `table`
          
          [env: FLUTE2_OUTPUT=]
          [possible values: table, json, quiet]

      --debug
          Print HTTP request/response traces to stderr. Card and bank-account numbers are masked to the last 4 digits; CVV/security codes are removed
