tests/snapshots/snapshots__pos_get.snap
---
source: tests/snapshots.rs
expression: help_for(&args)
---
Fetch a single POS transaction by ID (GET /v2/pos/transactions/{posTransactionId})

Usage: flute2 pos get [OPTIONS] <POS_TRANSACTION_ID>

Arguments:
  <POS_TRANSACTION_ID>  POS transaction UUID to retrieve (positional)

Options:
      --wait  Hold the response open until the transaction state changes
  -h, --help  Print help

Global options:
      --profile <PROFILE>  Active profile (environment). `sandbox` (default) or `production`/`prod` [env: FLUTE2_PROFILE=]
      --output <OUTPUT>    Output format: table (default), json, or quiet (id only). When omitted, falls back to the `FLUTE2_OUTPUT` env var, then to the `output` key in ~/.flute2/config.toml, then to `table` [env: FLUTE2_OUTPUT=] [possible values: table, json, quiet]
      --debug              Print HTTP request/response traces to stderr. Card and bank-account numbers are masked to the last 4 digits; CVV/security codes are removed
