tests/snapshots/snapshots__pos_list.snap
---
source: tests/snapshots.rs
expression: help_for(&args)
---
List POS transactions (GET /v2/pos/transactions)

Usage: flute2 pos list [OPTIONS]

Options:
      --page-index <PAGE_INDEX>
          Page number to fetch. Zero-based
      --page-size <PAGE_SIZE>
          Maximum results per page (1-100). Omit it to use the server's default
      --all
          Fetch every page until the collection is exhausted
      --sort-by <SORT_BY>
          Sort results by this field name
      --asc
          Sort ascending. With neither `--asc` nor `--desc`, the server's default order applies
      --desc
          Sort descending
      --terminal-id <TERMINAL_ID>
          Filter by terminal UUID
      --from <FROM_DATE>
          Filter results from this date-time inclusive (ISO 8601)
      --to <TO_DATE>
          Filter results up to this date-time inclusive (ISO 8601)
      --status <POS_TRANSACTION_STATUS>
          Filter results by status [possible values: in-progress, completed, cancelled, failed]
  -h, --help
          Print help

Global options:
      --profile <PROFILE>  Active profile (environment). `sandbox` (default) or `production`/`prod` [env: FLUTE2_PROFILE=]
      --output <OUTPUT>    Output format: table (default), json, or quiet (id only). When omitted, falls back to the `FLUTE2_OUTPUT` env var, then to the `output` key in ~/.flute2/config.toml, then to `table` [env: FLUTE2_OUTPUT=] [possible values: table, json, quiet]
      --debug              Print HTTP request/response traces to stderr. Card and bank-account numbers are masked to the last 4 digits; CVV/security codes are removed
